...
@OptIn(ExperimentalMaterialApi::class)
@Composable
fun ProfileScreen(navActions: NavigationActions, viewmodel: ProfileViewModel) {
  val state by viewmodel.uiState.collectAsState()

  Scaffold(
      modifier = Modifier.testTag("profileScreen"),
      bottomBar = {
        MainNavigationBar(
            onTabSelect = { navActions.navigateToMainTab(it) },
            tabList = MAIN_TABS_LIST,
            selectedTab = Destination.Profile)
      },
...

                          // personal information : name and role (depends on current association)
                          Column(modifier = Modifier.testTag("profileInfos").weight(1f)) {
                            Row(verticalAlignment = Alignment.CenterVertically) {
                              Text(
                                  state.myName,
                                  modifier = Modifier.testTag("profileName").weight(1f),
                                  style = MaterialTheme.typography.headlineSmall)

                              // edit name button
                              IconButton(
                                  onClick = { viewmodel.controlNameEdit(true) },
                                  modifier = Modifier.testTag("editProfile")) {
                                    Icon(
                                        imageVector = Icons.Filled.Edit,
                                        contentDescription = "Edit Profile Icon")
                                  }
                            }

...
                  horizontalAlignment = Alignment.CenterHorizontally) {
                    OutlinedTextField(
                        value = state.modifyingName,
                        singleLine = true,
                        onValueChange = { viewmodel.modifyName(it) },
                        label = { Text("Edit your name") },
                        modifier = Modifier.fillMaxWidth().testTag("editName"))
                    Row(
                        modifier = Modifier.fillMaxWidth().padding(4.dp),
                        horizontalArrangement = Arrangement.spacedBy(16.dp)) {
                          OutlinedButton(
                              onClick = { viewmodel.confirmModifyName() },
                              modifier =
                                  Modifier.wrapContentSize()
                                      .weight(1f)
                                      .testTag("confirmModifyButton")) {
                                Text(text = "Confirm", textAlign = TextAlign.Center)
                              }
                        }
                  }
            }
          }
...
