...
            }
      },
      bottomBar = {
        Button(
            onClick = { /*TODO: navigate to go to newAssociation screen*/},
            modifier =
                Modifier.fillMaxWidth().padding(16.dp).testTag("CreateNewOrganizationButton"),
            content = { Text(text = "Create new organization") },
            colors =
                ButtonDefaults.buttonColors(
                    contentColor = MaterialTheme.colorScheme.onPrimary,
                    containerColor = MaterialTheme.colorScheme.primary))
      }) { innerPadding ->
...
