...
import com.github.se.assocify.model.entities.User

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun createAssoScreen() {
  // should maybe be in viewmodel or something
    val bigList = listOf(User("1", "jean", Role("com")), User("2", "roger", Role("tres")), User("1", "jean", Role("com")), User("1", "jean", Role("com")), User("1", "jean", Role("com")), User("1", "jean", Role("com")), User("1", "jean", Role("com")), User("1", "jean", Role("com")), User("2", "roger", Role("tres")),User("2", "roger", Role("tres")),User("2", "roger", Role("tres")), User("2", "roger"
  val smallList = listOf(User("1", "jean", Role("com")), User("2", "roger", Role("tres")))
    var memberList by remember { mutableStateOf(bigList) }
  var name by remember { mutableStateOf("") }

  Scaffold(
      topBar = {
...
